# mos2

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml
docs/: system_manual.md
home/: .gitignore
moslib/: __init__.py  cache.py
moslib/core/: kernel.py  shell.py
