[project]
name = "mos2"
version = "0.1.0"
description = "MetsuOS v2 - Virtualized Linux Structure"
authors = [{name = "Raul Carrillo Garrido aka metsuke", email = "metsuke@icloud.com"}]
requires-python = ">=3.13"

[tool.poetry]
packages = [{include = "moslib"}]

[tool.poetry.dependencies]
python = ">=3.13"
joblib = "^1.4.0"
cachetools = "^5.3.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
